

	        CHANGES IN Renext package VERSION 3.1-2

CHANGES

	o In the 'Renext Guide' document, the version of R used is now
	mentioned at the beginning. The document has consequently be
	recompiled with a new version.

	o In the function `Ren2gev` the computation of the gradient was
	not correct in the case where the shape is nearly zero (it
	returned NaN). The suitable formula based on a Taylor expansion is
	now implemented.

	o Several re-arrangements of the code (indentation, ...)


	        CHANGES IN Renext package VERSION 3.1-1

BUG FIX
 
	o The function 'rRendata' dit not work as expected when
	'threshold' was set to a non-zero value.

	
		CHANGES IN Renext package VERSION 3.1-0

CHANGES

	o Simple change of version for CRAN submission.


		CHANGES IN Renext package VERSION 3.0-5

BUG FIX

	o In 'Renouv', an error occured with 'x = NULL' when the mean
	of 'MAX.data' or that of 'OTS.data' was negative, due to a
	missuse of 'log' when scaling of the data. Thanks to Yasser
	Hamdi.

CHANGES 

	o Slight changes in 'Renext Guide' and documentation.


		CHANGES IN Renext package VERSION 3.0-4

BUG FIX

	o In 'fweibull', the estimated covariance was wrong with the
	(non-default) 'info.observed = TRUE'.

CHANGES 

	o 'Renouv' now uses by default the observed information matrix
	rather than the expected one in the case where there is no
	historical infoemation and a special distribution is used.
	Changes were consequently needed in 'fML', and the estimation
	functions for some special distributions: 'fweibull',
	'flomax', 'fmaxlo', 'fGPD', where the default information
	matrix is now the observed one.

	o The 'fGPD1' 'flomax1' and 'fmaxlo1' (all for a fixed
	'shape', non exported) where changed to allow 'info.observed =
	TRUE'. Good bounds on the unknown scale parameter are now
	used, avoiding convergence problems. Moreover the data is
	scaled by default thus improving numerical precision.

	o The 'fweibull' function now scales the data.
