@@ -1,8 +1,8 @@
 Package: Renext
 Type: Package
 Title: Renewal Method for Extreme Values Extrapolation
-Version: 3.1-2
-Date: 2020-01-20
+Version: 3.1-3
+Date: 2022-05-31
 Author: Yves Deville <deville.yves@alpestat.com>, IRSN <renext@irsn.fr>
 Maintainer: Lise Bardet <lise.bardet@irsn.fr>
 Depends: R (>= 2.8.0), stats, graphics, evd
