@@ -1,5 +1,14 @@
 
+	        CHANGES IN Renext package VERSION 3.1-3
 
+CHANGES
+
+	o No longer check on the class of objects, `inherits`.
+
+	o Fixes in doc (URLs).
+	
+
+	
 	        CHANGES IN Renext package VERSION 3.1-2
 
 CHANGES
